# cmake_workshop

./: README.md
code_exercise/: .gitignore  CMakeLists.txt  README.md
code_exercise/external_lib/: CMakeLists.txt
code_exercise/src/: board_definitions.hpp  main.cpp
teacher/code_winner_evaluator/: CMakeLists.txt  README.md  award_app.cpp
teacher/mqtt_server_configuration/dnsmasq_conf/: dnsmasq.conf
teacher/mqtt_server_configuration/hostapd_conf/: hostapd.conf
teacher/mqtt_server_configuration/network_interfaces_conf/: interfaces
teacher/presentation_latex_source_files/HAN- CMake presentation/: layout.tex  main.tex
